[tool.poetry]
name = "repl-nix-sudokuproject"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_sudokuproject"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"
board = "^1.0"
alien-invasion1 = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
